--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,6 +21,8 @@ jobs:
       packages: ${{ steps.get-packages.outputs.packages }}
       # List of changed light client packages, excluding `fixture-generator`
       lc-packages: ${{ steps.get-packages.outputs.lc-packages }}
+      solidity-packages: ${{ steps.get-packages.outputs.solidity-packages }}
+      move-packages: ${{ steps.get-packages.outputs.move-packages }}
       aptos: ${{ steps.filter.outputs.aptos }}
       ethereum: ${{ steps.filter.outputs.ethereum }}
       kadena: ${{ steps.filter.outputs.kadena }}
@@ -44,6 +46,10 @@ jobs:
           PACKAGES=$(echo '${{ steps.filter.outputs.changes }}' | jq -c '.')
           # Remove `fixture-generator` if it exists, as we don't want to run tests or the cycle checker
           LC_PACKAGES=$(echo "$PACKAGES" | jq -c 'del(.[] | select(. == "fixture-generator"))')
+          # Remove `ethereum` if it exists, as we don't use it for Solidity tests
+          SOLIDITY_PACKAGES=$(echo "$LC_PACKAGES" | jq -c 'del(.[] | select(. == "ethereum"))')
+          # Remove `aptos` and `kadena` if they exist, as we don't use them for Move tests
+          MOVE_PACKAGES=$(echo "$LC_PACKAGES" | jq -c 'del(.[] | select(. == "aptos" or . == "kadena"))')
 
           # If any packages were changed, ensure we run clippy on `fixture-generator` as it imports all light clients
           if [ "$PACKAGES" != "[]" ]; then
@@ -51,8 +57,11 @@ jobs:
               PACKAGES=$(echo "$PACKAGES" | jq -c '. + ["fixture-generator"]')
             fi
           fi
+          
           echo "packages=$PACKAGES" | tee -a "$GITHUB_OUTPUT"
           echo "lc-packages=$LC_PACKAGES" | tee -a "$GITHUB_OUTPUT"
+          echo "solidity-packages=$SOLIDITY_PACKAGES" | tee -a "$GITHUB_OUTPUT"
+          echo "move-packages=$MOVE_PACKAGES" | tee -a "$GITHUB_OUTPUT"
 
   test:
     needs: changes
@@ -128,7 +137,13 @@ jobs:
   solidity-unit-tests:
     needs: changes
     runs-on: buildjet-16vcpu-ubuntu-2204
-    if: needs.changes.outputs.aptos == 'true'
+    if: ${{ needs.changes.outputs.solidity-packages != '[]' && needs.changes.outputs.solidity-packages != '' }}
+    strategy:
+      fail-fast: false
+      matrix:
+        # Parse JSON array containing names of all changed light client packages relevant to Solidity,
+        # e.g. ['aptos', 'kadena'] if `aptos`, `ethereum` and `kadena` contain changes.
+        package: ${{ fromJSON(needs.changes.outputs.solidity-packages) }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -145,21 +160,28 @@ jobs:
       - name: Check formatting
         run: |
           forge fmt --check
-        working-directory: ${{ github.workspace }}/aptos/solidity/contracts/
+        working-directory: ${{ github.workspace }}/${{ matrix.package }}/solidity/contracts/
       - name: Run Forge build
         run: |
           forge --version
           forge build
-        working-directory: ${{ github.workspace }}/aptos/solidity/contracts/
+        working-directory: ${{ github.workspace }}/${{ matrix.package }}/solidity/contracts/
       - name: Run Forge tests
         run: |
           forge test
-        working-directory: ${{ github.workspace }}/aptos/solidity/contracts/
+        working-directory: ${{ github.workspace }}/${{ matrix.package }}/solidity/contracts/
+
 
   move-tests:
     needs: changes
     runs-on: buildjet-16vcpu-ubuntu-2204
-    if: needs.changes.outputs.ethereum == 'true'
+    if: ${{ needs.changes.outputs.move-packages != '[]' && needs.changes.outputs.move-packages != '' }}
+    strategy:
+      fail-fast: false
+      matrix:
+        # Parse JSON array containing names of all changed light client packages relevant to Move,
+        # e.g. ['ethereum'] if `aptos`, `ethereum` and `kadena` contain changes.
+        package: ${{ fromJSON(needs.changes.outputs.move-packages) }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -189,11 +211,11 @@ jobs:
           else
             echo "Balance is sufficient. No action needed."
           fi
-        working-directory: ${{ github.workspace }}/ethereum/move
+        working-directory: ${{ github.workspace }}/${{ matrix.package }}/move
       - name: Run unit tests
         run: |
           aptos move test --named-addresses plonk_verifier_addr=devnet
-        working-directory: ${{ github.workspace }}/ethereum/move
+        working-directory: ${{ github.workspace }}/${{ matrix.package }}/move
       - name: Test verifier contract
         run: |
           aptos move create-resource-account-and-publish-package --address-name plonk_verifier_addr --profile testnet --seed $(openssl rand -hex 32) --assume-yes
@@ -208,7 +230,7 @@ jobs:
               exit 1
             fi
           done
-        working-directory: ${{ github.workspace }}/ethereum/move
+        working-directory: ${{ github.workspace }}/${{ matrix.package }}/move
 
   cycle-count-regression:
     needs: changes
@@ -218,7 +240,7 @@ jobs:
       fail-fast: false
       matrix:
         # Parse JSON array containing names of all changed light client packages
-        # e.g. ['aptos', 'ethereum'] if both directories contain changes
+        # e.g. ['aptos', 'ethereum', 'kadena'] if all directories contain changes
         package: ${{ fromJSON(needs.changes.outputs.lc-packages) }}
     steps:
       - uses: actions/checkout@v4
