--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,12 @@
 [submodule "aptos/solidity/contracts/lib/sphinx-contracts"]
 	path = aptos/solidity/contracts/lib/sphinx-contracts
 	url = https://github.com/argumentcomputer/sphinx-contracts
+[submodule "kadena/solidity/contracts/lib/forge-std"]
+	path = kadena/solidity/contracts/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "kadena/solidity/contracts/lib/sphinx-contracts"]
+	path = kadena/solidity/contracts/lib/sphinx-contracts
+	url = https://github.com/lurk-lab/sphinx-contracts
+[submodule "kadena/solidity/contracts/lib/openzeppelin-contracts"]
+	path = kadena/solidity/contracts/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
