--- a/fixture-generator/Cargo.toml
+++ b/fixture-generator/Cargo.toml
@@ -12,9 +12,9 @@ name = "generate-fixture"
 path = "src/bin/main.rs"
 
 [dependencies]
-sphinx-sdk = { git = "ssh://git@github.com/lurk-lab/sphinx", tag = "v1.0.0", features = ["plonk"] }
-sphinx-prover = { git = "ssh://git@github.com/lurk-lab/sphinx", tag = "v1.0.0" }
-ethereum-lc = { path = "../ethereum/light-client",  features = ["ethereum"] }
+sphinx-sdk = { git = "ssh://git@github.com/argumentcomputer/sphinx", branch = "dev", features = ["plonk"] }
+sphinx-prover = { git = "ssh://git@github.com/argumentcomputer/sphinx", branch = "dev" }
+ethereum-lc = { path = "../ethereum/light-client", features = ["ethereum"] }
 aptos-lc = { path = "../aptos/light-client", features = ["aptos"] }
 serde_json = { version = "1", features = ["alloc"] }
 serde = { version = "1.0.193", features = ["derive"] }
