feat: Patch kadena LCs to use SHA512 patches

--- a/kadena/programs/benchmarks/sha512-caller/Cargo.toml
+++ b/kadena/programs/benchmarks/sha512-caller/Cargo.toml
@@ -9,3 +9,4 @@ resolver = "2"
 [dependencies]
 sphinx-zkvm = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
 sha2 = { git = "https://github.com/argumentcomputer/RustCrypto-hashes", branch = "zkvm" }
+blake2 = { git = "https://github.com/argumentcomputer/RustCrypto-hashes", branch = "zkvm" }
