--- a/kadena/programs/spv/Cargo.toml
+++ b/kadena/programs/spv/Cargo.toml
@@ -12,4 +12,5 @@ kadena-lc-core = { path = "../../core", package = "kadena-lc-core" }
 [patch.crates-io]
 # Sphinx patch
 #tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
-sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }
+sha2 = { git = "https://github.com/argumentcomputer/RustCrypto-hashes", branch = "zkvm" }
+blake2 = { git = "https://github.com/argumentcomputer/RustCrypto-hashes", branch = "zkvm" }
