--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -66,7 +66,7 @@ jobs:
           elif [[ "${{ inputs.light-client }}" == "ethereum" ]]; then
             MORE_CRATES="programs/inclusion,programs/committee-change"
           else
-            MORE_CRATES="programs/longest-chain"
+            MORE_CRATES="programs/longest-chain,programs/spv"
           fi
 
           echo "MORE_CRATES=$MORE_CRATES" | tee -a $GITHUB_ENV
