--- a/ethereum/Cargo.toml
+++ b/ethereum/Cargo.toml
@@ -35,11 +35,11 @@ tree_hash_derive = "0.6"
 # Crypto dependencies
 bls12_381 = { git = "https://github.com/lurk-lab/bls12_381.git", branch = "zkvm" }
 # Sphinx dependencies
-sphinx-derive = { git = "ssh://git@github.com/lurk-lab/sphinx", tag = "v1.0.0" }
-sphinx-sdk = { git = "ssh://git@github.com/lurk-lab/sphinx", tag = "v1.0.0", features = ["plonk"] }
-sphinx-zkvm = { git = "ssh://git@github.com/lurk-lab/sphinx", tag = "v1.0.0" }
-sphinx-helper = { git = "ssh://git@github.com/lurk-lab/sphinx", tag = "v1.0.0" }
-sphinx-prover = { git = "ssh://git@github.com/lurk-lab/sphinx", tag = "v1.0.0" }
+sphinx-derive = { git = "ssh://git@github.com/argumentcomputer/sphinx", branch = "dev" }
+sphinx-sdk = { git = "ssh://git@github.com/argumentcomputer/sphinx", branch = "dev", features = ["plonk"] }
+sphinx-zkvm = { git = "ssh://git@github.com/argumentcomputer/sphinx", branch = "dev" }
+sphinx-helper = { git = "ssh://git@github.com/argumentcomputer/sphinx", branch = "dev" }
+sphinx-prover = { git = "ssh://git@github.com/argumentcomputer/sphinx", branch = "dev" }
 
 [patch.crates-io]
 # Sphinx patch
