ci: Fix weekly benchmark report

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -26,6 +26,7 @@ runs:
         workspaces: |
           aptos -> target
           ethereum -> target
+          kadena -> target
     - uses: taiki-e/install-action@nextest
     - name: Install deps
       shell: bash
