clippy: set to beta

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -119,7 +119,7 @@ jobs:
         working-directory: ${{ github.workspace }}/${{ matrix.package }}
       # The stable toolchain is used to run clippy so as to not hit nightly errors
       - name: cargo clippy
-        run: cargo +stable xclippy -D warnings
+        run: cargo xclippy -D warnings
         working-directory: ${{ github.workspace }}/${{ matrix.package }}
       - name: Doctests
         if: ${{ matrix.package != 'fixture-generator'}}
