feat: Cleanup and simplify updating to the latest Sphinx (#291)
* chore: Drop pact path

* chore: Update Solidity project (Aptos)

* chore: Update Solidity project (Kadena)

* feat: Update fixture-generator to output additional information on fixtures

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ Cargo.lock
 
 # IDE config
 .idea
+.vscode
 
 # Secrets
 *secret*
@@ -13,4 +14,7 @@ Cargo.lock
 # Contract assets
 ethereum/move/build/*
 ethereum/move/gas-profiling/*
-
+aptos/solidity/contracts/cache
+aptos/solidity/contracts/out
+kadena/solidity/contracts/cache
+kadena/solidity/contracts/out
