--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -36,8 +36,8 @@ jobs:
 
   build:
     needs: changes
+    if: ${{ needs.changes.outputs.books != '[]' && needs.changes.outputs.books != '' }}
     runs-on: ubuntu-latest
-    if: ${{ needs.changes.outputs.lc-packages != '[]' && needs.changes.outputs.packages != '' }}
     strategy:
       fail-fast: false
       matrix:
@@ -57,7 +57,9 @@ jobs:
           retention-days: 1
 
   deploy:
+    needs: build
     if: ${{ (github.ref_name == 'dev' && github.event_name == 'push') && (needs.changes.outputs.books != '[]' && needs.changes.outputs.books != '') }}
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
@@ -70,8 +72,6 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}/${{ matrix.light-client }}
-    runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
